--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
 }
 
 img {
-    border-radius: 20px;
+    border-radius: 50%;
     width: 320px;
     height: 320px;
+    border: 1px solid limegreen;
 }
 
 h1 {
@@ -47,6 +48,7 @@ a {
     text-decoration: none;
     border-radius: 6px;
     font-size: 16px;
+    cursor: pointer;
 
     &:hover {
         background-color: darkgreen;
